[package]
name = "win-canvas"
version = "0.1.0"
edition = "2021"
description = "An infinite canvas for managing open windows with DWM thumbnails"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Graphics_GdiPlus", "Win32_System_LibraryLoader", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D"]

[profile.release]
opt-level = 3
lto = true
