[package]
name = "komorebi-reveal"
version = "0.1.0"
edition = "2021"
description = "An infinite canvas for managing open windows with DWM thumbnails"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Graphics_GdiPlus", "Win32_System_LibraryLoader"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# Compile all dependencies optimised even in debug builds.
# The windows-rs crate in particular is very slow unoptimised; this makes
# debug builds feel much closer to release without affecting your own compile times.
[profile.dev.package."*"]
opt-level = 3
